FocusVisible: fix focus classes

--- a/src/components/FocusVisible/FocusVisible.css
+++ b/src/components/FocusVisible/FocusVisible.css
@@ -1,6 +1,7 @@
-.AppRoot--keyboard-input .FocusVisible .FocusVisible__in,
+.AppRoot--keyboard-input .Tappable:focus > .FocusVisible,
 .Tappable:focus-visible > .FocusVisible,
-.AppRoot--keyboard-input .Switch:focus-within .FocusVisible {
+.AppRoot--keyboard-input input:focus ~ .FocusVisible,
+input:focus-visible ~ .FocusVisible {
   position: absolute;
   top: 2px;
   left: 2px;
@@ -16,7 +17,8 @@
 
 .AppRoot--keyboard-input .Tappable:focus > .FocusVisible--outside,
 .Tappable:focus-visible > .FocusVisible--outside,
-.AppRoot--keyboard-input .Switch:focus-within .FocusVisible--outside {
+.AppRoot--keyboard-input input:focus ~ .FocusVisible--outside,
+input:focus-visible ~ .FocusVisible--outside {
   top: -2px;
   left: -2px;
   right: -2px;
@@ -32,7 +34,8 @@
 @media (prefers-reduced-motion: no-preference) {
   .AppRoot--keyboard-input .Tappable:focus > .FocusVisible,
   .Tappable:focus-visible > .FocusVisible,
-  .AppRoot--keyboard-input .Switch:focus-within .FocusVisible {
+  .AppRoot--keyboard-input input:focus ~ .FocusVisible,
+  input:focus-visible ~ .FocusVisible {
     top: 4px;
     left: 4px;
     right: 4px;
@@ -44,7 +47,8 @@
 
   .AppRoot--keyboard-input .Tappable:focus > .FocusVisible--outside,
   .Tappable:focus-visible > .FocusVisible--outside,
-  .AppRoot--keyboard-input .Switch:focus-within .FocusVisible--outside {
+  .AppRoot--keyboard-input input:focus ~ .FocusVisible--outside,
+  input:focus-visible ~ .FocusVisible--outside {
     top: 0;
     left: 0;
     bottom: 0;
